move www to folder

--- a/www/index.html
+++ b/www/index.html
@@ -88,7 +88,7 @@
                             <!--<li><a href="#home" class="selected">Home</a></li>-->
                             <li><a href="#services">services 時空專業</a></li>
                             <li><a href="#whatwedo">portfolio 時空案例</a></li>
-                            <li><a href="http://shop.timesmarketing.tw" target="_blank" >SHOP 時空商店</a></li>
+                            <li><a href="http://shop.timesmarketing.tw" target="_blank" data-label="no">SHOP 時空商店</a></li>
                             <li><a href="#contact">Contact 聯絡我們</a></li>
 
 
