應付綠界用

--- a/www/index.html
+++ b/www/index.html
@@ -82,7 +82,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="brand" href="#home">  <img src="img/logo_small.png"></a>
+                    <a class="brand" href="#home">  <img src="img/logo_small.png" style="width: 120%;"></a>
                     <div class="nav-collapse collapse" >
                         <ul class="nav pull-right">
                             <!--<li><a href="#home" class="selected">Home</a></li>-->
@@ -120,11 +120,14 @@
                     <div class="span4">
                         <div class="box">
                             <div class="box_icon">
-                                <i class="icon-truck icon-5x"></i>
+                                <!--<i class="icon-truck icon-5x"></i>-->
+                                <img src="img/topas.png" alt="">
                             </div>
-                            <h4><strong>專利車體舞台廣告</strong></h4>
+                            <!--<h4><strong>專利車體舞台廣告</strong></h4>-->
+                            <h4><strong>RIMOWA TOPAS 全系列</strong></h4>
                             <p>
-                                台灣/香港/澳門，<br>專利17噸大卡車體改裝，<br>沒有做不到的效果，<br>只有你意想想不到的成果。
+                                <!--台灣/香港/澳門，<br>專利17噸大卡車體改裝，<br>沒有做不到的效果，<br>只有你意想想不到的成果。-->
+                                TOPAS<br>TOPAS TITANIUM<br>TOPAS STEALTH
                             </p>
 
                         </div>
@@ -132,11 +135,14 @@
                     <div class="span4">
                         <div class="box">
                             <div class="box_icon">
-                                <i class="icon-map-marker icon-5x"></i>
+                                <!--<i class="icon-map-marker icon-5x"></i>-->
+                                <img src="img/salsa.png" alt="">
                             </div>
-                            <h4><strong>獨家LED牆面廣告</strong></h4>
+                            <!--<h4><strong>獨家LED牆面廣告</strong></h4>-->
+                            <h4><strong>RIMOWA SALSA 全系列</strong></h4>
                             <p>
-                                小巨蛋/信義商圈，<br>獨家LED廣告策略採購，鎖定核心商圈，強勢推播，完整涵蓋大台北精華地段，每月破5000檔播送，霸氣提升，氣勢衝擊感官。
+                                <!--小巨蛋/信義商圈，<br>獨家LED廣告策略採購，鎖定核心商圈，強勢推播，完整涵蓋大台北精華地段，每月破5000檔播送，霸氣提升，氣勢衝擊感官。-->
+                                SALSA<br>SALSA DELUXE<br>SALSA AIR
                             </p>
 
                         </div>
@@ -156,11 +162,14 @@
                     <div class="span4">
                         <div class="box">
                             <div class="box_icon">
-                                <i class="icon-road icon-5x"></i>
+                                <!--<i class="icon-road icon-5x"></i>-->
+                                <img src="img/bn.png" alt="">
                             </div>
-                            <h4><strong>全球跨境電商媒體</strong></h4>
+                            <!--<h4><strong>全球跨境電商媒體</strong></h4>-->
+                            <h4><strong>RIMOWA 稀有全系列</strong></h4>
                             <p>
-                                完整涵蓋地表所有裝置電商系統，網購系統、分銷系統、管理系統、會員系統、廣告系統，無論安卓或蘋果，全部都網羅，跨境金物流，一手全包辦。
+                                <!--完整涵蓋地表所有裝置電商系統，網購系統、分銷系統、管理系統、會員系統、廣告系統，無論安卓或蘋果，全部都網羅，跨境金物流，一手全包辦。-->
+                                LIMBO<br>VICTORY RED<br>BOSSA NOVA
                             </p>
 
                         </div>
@@ -416,7 +425,8 @@
                             <p class="contactTime">
                                 Mon-Fri: 9:00am → 5:30pm <br>
                             </p>
-                            <p class="contactAddress">101 Tower 88F <br>Taiwan (R.O.C)
+                            <!--<p class="contactAddress">101 Tower 88F <br>Taiwan (R.O.C)-->
+                            <p class="contactAddress">忠孝東路四段169號12F-1 <br>Taiwan (R.O.C)
                                 <br><a class="fancybox-media fancybox.iframe" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.0050382987697!2d121.56232121453482!3d25.033903083972298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abb6da9c9e1f%3A0x1206bcf082fd10a6!2zMTEw6Ie65YyX5biC5L-h576p5Y2A5L-h576p6Lev5LqU5q61N-iZn-WPsOWMlzEwMeWkp-aokw!5e0!3m2!1szh-TW!2stw!4v1477708210702">View Map</a>
                                 <!--https://maps.google.com/maps/ms?ie=UTF8&oe=UTF8&msa=0&msid=218337429610107903639.00047c7b97971cc480289&dg=feature&t=h&ll=48.857423,2.286819&spn=0.002471,0.00456&z=17&iwloc=00047c7b9b089f45e6058&output=embed-->
                             </p>
