--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
                 width:100%;
             }
         </style>
+        <script src='//s3.amazonaws.com/pushresponder/banners/responders/a02/921/cc-/original/pushresponder-init.js'></script>
 
 
     </head>
